--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">octochat</string>
+    <string name="app_name">UserProfile</string>
+    <string name="menu_settings">Settings</string>
+
+
 </resources>
